--- a/Lr_12/add.html
+++ b/Lr_12/add.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h2>Додати книгу</h2>
-    <form action="Add_book.php" method="post"> 
+    <form action="add_book.php" method="post">
         Назва книги: <input type="text" name="title"><br>
         Автор: <input type="text" name="author"><br>
         Рік видання: <input type="number" name="published_year"><br>
